UtahLiveDataTest/src/objects/FINETProgramCode__c.object
<CustomObject>
    <description>This is created for the Program coding block for USBE</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FINET Program Codes</relationshipLabel>
        <relationshipName>FINET_Program_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodeFromFINET__c</fullName>
        <label>Code From FINET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedInFINET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In FINET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeptCode__c</fullName>
        <formula>Account__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPT_CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeptName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveBeginDate__c</fullName>
        <label>EFBGN_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveEndDate__c</fullName>
        <label>EFEND_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FiscalYearName__c</fullName>
        <formula>FiscalYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>FINET Program Codes</relationshipLabel>
        <relationshipName>FINET_Program_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MajorProgramCode__c</fullName>
        <label>MGR_PROG_CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueFromFINET__c</fullName>
        <label>PROG_NM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FINET Program Code</label>
    <nameField>
        <label>PROG_CD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINET Program Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>